@@ -35,17 +35,9 @@ const char * CreatePath(const char* filename, enum DirectoryType argument) {
 	if (getcwd(cwd, sizeof(cwd)) != NULL)
 		printf("Current working dir: %s\n", cwd);
 	
-	if(strstr(cwd,"sub/") == NULL){
-		strcpy(path,"../../../sntp/tests/data/");
-	}
-	else
-	if(strstr(cwd,"_build") == NULL){ //if it's run as make distcheck, it's in a different directory!
-		strcpy(path,"../../../sntp/tests/data/");
-	}
-
-	else {
-		strcpy(path,"../../../../sntp/tests/data/");
-	}
+	printf("builddir is <@builddir@>\n");
+	printf("srcdir is   <@srcdir@>\n");
+	strcpy(path,"@srcdir@/data/");
 
 	//strcpy(path,"");
 	strcat(path,filename);
