@@ -24,6 +24,7 @@
 * [Bug 2845] Harden memory allocation in ntpd.
 * [Bug 2852] 'make check' can't find unity.h.  Hal Murray.
 * [Bug 2854] Missing brace in libntp/strdup.c.  Masanari Iida.
+* Fixes to sntp/tests/fileHandlingTest.h.in.  Harlan Stenn.
 * Report select() debug messages at debug level 3 now.
 * sntp/scripts/genLocInfo: treat raspbian as debian.
 * Unity test framework fixes.
